# comprobo-cpp-2025

./: .gitignore
ros_ws/src/hello_world/: package.xml
ros_ws/src/hello_world/src/: hello_world.cpp
ros_ws/src/isr_day02/: CMakeLists.txt  package.xml
ros_ws/src/isr_day02/src/: pub_node.cpp  sub_node.cpp
sandbox/day1/: hello_world.cpp  main.cpp  multi_print.cpp
